--- a/src/html/layout/navbar.html
+++ b/src/html/layout/navbar.html
@@ -3,7 +3,7 @@
         <!-- <li class="navbar__nav__item"><a href="#">Hi</a></li>
         <li class="navbar__nav__item"><a href="#">Tech</a></li> -->
         <li class="navbar__nav__item">
-            <a href="https://github.com/jmontejr" target="_blank">
+            <a href="https://github.com/jmontejr" target="_blank" rel="noopener noreferrer">
                 <img src="assets/images/icons/github.svg" alt="Github logo" title="Github">
             </a>
         </li>
