--- a/src/assets/scss/pages/_home.scss
+++ b/src/assets/scss/pages/_home.scss
@@ -17,7 +17,7 @@
     &__text {
         @media screen and (min-width: 1200px) {
             &:hover {
-                &>p {
+                .hero__text__paragraph {
                     transform: translateX(2.5rem);
     
                     &:before {
@@ -113,32 +113,42 @@
         margin: 1.5rem auto 2.5rem;
         width: 80%;
 
-        &> a {
-        
-            &:not(:first-child):not(:last-child) {
-                margin-left: 1.5rem;
-            }
-
-            &:last-child {
-                margin-top: 1.5rem;
-
-                @media screen and (min-width: 768px) {
-                    margin-top: 0;
-                }
-                
-            }
-            @media screen and (min-width: 992px) {
-                &:not(:first-child) {
-                    margin-left: 1.5rem;
-                }
-            }
-        }
-
         @media screen and (min-width: 992px) {
             justify-content: flex-start;
             flex-wrap: nowrap;
             margin: 1.5rem 0;
             width: 100%;
+        }
+
+        &--404 {
+            @media only screen and(min-width: 768px) {
+                margin: 0 auto 2.5rem;
+            }
+        }
+
+        .btn {
+            &__social {
+                
+                &:not(:nth-child(3)) {
+                    margin-right: 1.5rem;
+                }
+
+                @media screen and (min-width: 992px) {
+                    margin-right: 1.5rem;
+                }
+            }
+
+            &__primary {
+                margin-top: 1.5rem;
+    
+                @media screen and (min-width: 768px) {
+                    margin-top: 0;
+                }
+
+                &--404 {
+                    margin-top: 0;
+                }
+            }
         }
     }
 
