--- a/src/assets/scss/base/_typography.scss
+++ b/src/assets/scss/base/_typography.scss
@@ -4,8 +4,11 @@
     font-style: normal;
     font-weight: 300;
     font-display: swap;
-    src: local('Lato Light'), 
-        local('Lato-Light'), 
+    src: local(-apple-system),
+        local(BlinkMacSystemFont),
+        local("Segoe UI"),
+        local("Roboto"),
+        local("Ubuntu"),
         url('../fonts/lato/Lato-Thin.woff2') format('woff2'),
         url('../fonts/lato/Lato-Thin.ttf') format('truetype');
     unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
@@ -15,8 +18,11 @@
     font-style: normal;
     font-weight: 400;
     font-display: swap;
-    src: local('Lato Regular'), 
-        local('Lato-Regular'), 
+    src: local(-apple-system),
+        local(BlinkMacSystemFont),
+        local("Segoe UI"),
+        local("Roboto"),
+        local("Ubuntu"),
         url('../fonts/lato/Lato-Regular.woff2') format('woff2'),
         url('../fonts/lato/Lato-Regular.ttf') format('truetype');
     unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
@@ -26,8 +32,11 @@
     font-style: normal;
     font-weight: 700;
     font-display: swap;
-    src: local('Lato Bold'), 
-        local('Lato-Bold'), 
+    src: local(-apple-system),
+        local(BlinkMacSystemFont),
+        local("Segoe UI"),
+        local("Roboto"),
+        local("Ubuntu"),
         url('../fonts/lato/Lato-Bold.woff2') format('woff2'),
         url('../fonts/lato/Lato-Bold.ttf') format('truetype');
     unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
@@ -39,8 +48,11 @@
     font-style: normal;
     font-weight: 300;
     font-display: swap;
-    src: local('Montserrat Light'), 
-        local('Montserrat-Light'), 
+    src: local(-apple-system),
+        local(BlinkMacSystemFont),
+        local("Segoe UI"),
+        local("Roboto"),
+        local("Ubuntu"), 
         url('../fonts/montserrat/Montserrat-Light.woff2') format('woff2'),
         url('../fonts/montserrat/Montserrat-Light.ttf') format('truetype');
     unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
@@ -50,8 +62,11 @@
     font-style: normal;
     font-weight: 400;
     font-display: swap;
-    src: local('Montserrat Regular'), 
-        local('Montserrat-Regular'), 
+    src: local(-apple-system),
+        local(BlinkMacSystemFont),
+        local("Segoe UI"),
+        local("Roboto"),
+        local("Ubuntu"),
         url('../fonts/montserrat/Montserrat-Regular.woff2') format('woff2'),
         url('../fonts/montserrat/Montserrat-Regular.ttf') format('truetype');
     unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
@@ -61,8 +76,11 @@
     font-style: normal;
     font-weight: 500;
     font-display: swap;
-    src: local('Montserrat Medium'), 
-        local('Montserrat-Medium'), 
+    src: local(-apple-system),
+        local(BlinkMacSystemFont),
+        local("Segoe UI"),
+        local("Roboto"),
+        local("Ubuntu"),
         url('../fonts/montserrat/Montserrat-Medium.woff2') format('woff2'),
         url('../fonts/montserrat/Montserrat-Medium.ttf') format('truetype');
     unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
